# Aoc22

./: .gitignore  2022.cpp  CMakeLists.txt  Day1.cpp  Day2.cpp  Day3.cpp  Day4.cpp  Day5.cpp  Day6.cpp  Day7.cpp  HelperFunctions.cpp  days.cpp  days.h
